; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_af9013.c_af9013_write_ofsm_regs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_af9013.c_af9013_write_ofsm_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.af9013_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.af9013_state*, i32, i32*, i32)* @af9013_write_ofsm_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @af9013_write_ofsm_regs(%struct.af9013_state* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.af9013_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.af9013_state* %0, %struct.af9013_state** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = sub nsw i32 %10, 1
  %12 = shl i32 %11, 2
  %13 = or i32 3, %12
  %14 = or i32 %13, 64
  %15 = or i32 %14, 128
  store i32 %15, i32* %9, align 4
  %16 = load %struct.af9013_state*, %struct.af9013_state** %5, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @af9013_write_regs(%struct.af9013_state* %16, i32 %17, i32 %18, i32* %19, i32 %20)
  ret i32 %21
}

declare dso_local i32 @af9013_write_regs(%struct.af9013_state*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
